--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,6 @@ project:
 website:
   title: "star77sa.github.io"
   site-url: https://star77sa.github.io
-  description: "blog"
   navbar:
     right:
       - about.qmd
@@ -12,10 +11,16 @@ website:
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+  sidebar:
+    style: "docked"
+    search: true
+    contents: auto
 format:
   html:
     theme: cosmo
     css: styles.css
-
+    code-fold: false
+    code-line-numbers: true
+    code-copy: true
 
 
