--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "star77sa.github.io"
+  title: "Time Series"
   site-url: https://star77sa.github.io
   navbar:
     right:
