--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,9 +9,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/star77sa
   sidebar:
     style: "docked"
     search: true
