--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "Time Series"
-  favicon: <a href="https://adioma.com">Adioma</a>
+  favicon: time-series.png
   site-url: https://star77sa.github.io
   navbar:
     right:
